--- a/down/Project/RM-F427.uvprojx
+++ b/down/Project/RM-F427.uvprojx
@@ -337,7 +337,7 @@
               <MiscControls>--c99</MiscControls>
               <Define>USE_STDPERIPH_DRIVER,STM32F427_437xx,</Define>
               <Undefine></Undefine>
-              <IncludePath>..\Libraries\CMSIS\Device\ST\STM32F4xx\Include;..\Libraries\CMSIS\Include;..\Libraries\STM32F4xx_StdPeriph_Driver\inc;..\User;..\User\delay;..\Hardware\LED;..\User\sys;..\Hardware\motor;..\Hardware\STMFLASH;..\Hardware\flash;..\Hardware\power;..\Hardware\key;..\Hardware\BUZZER;..\Hardware\DJi_remote;..\Hardware\FS_remote;..\Hardware\remote_code;..\Hardware\TIM3_Events;..\APP\kinematic;..\APP\angle_pid;..\APP\speed_pid;..\APP\json;..\BSP\usart;..\BSP\timer;..\BSP\can;..\User\Init;..\Hardware\fric;..\APP\mode;..\Hardware\gimbal;..\APP\judge</IncludePath>
+              <IncludePath>..\Libraries\CMSIS\Device\ST\STM32F4xx\Include;..\Libraries\CMSIS\Include;..\Libraries\STM32F4xx_StdPeriph_Driver\inc;..\User;..\User\delay;..\Hardware\LED;..\User\sys;..\Hardware\motor;..\Hardware\STMFLASH;..\Hardware\flash;..\Hardware\power;..\Hardware\key;..\Hardware\BUZZER;..\Hardware\DJi_remote;..\Hardware\FS_remote;..\Hardware\remote_code;..\Hardware\TIM3_Events;..\APP\kinematic;..\APP\angle_pid;..\APP\speed_pid;..\APP\json;..\BSP\usart;..\BSP\timer;..\BSP\can;..\User\Init;..\Hardware\fric;..\APP\mode;..\Hardware\gimbal;..\APP\judge;..\Hardware\imuReader</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -626,6 +626,11 @@
               <FileType>1</FileType>
               <FilePath>..\BSP\usart\uart5.c</FilePath>
             </File>
+            <File>
+              <FileName>bsp_imu_usart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\BSP\usart\bsp_imu_usart.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -700,6 +705,11 @@
               <FileName>power_limitation.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Hardware\power_limitation\power_limitation.c</FilePath>
+            </File>
+            <File>
+              <FileName>imuReader.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Hardware\imuReader\imuReader.c</FilePath>
             </File>
           </Files>
         </Group>
